--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -65,7 +65,7 @@
 	 <li><a href="solution/2DDFSSummary.html">2D Array棋盘类DFS专题 用处： 1.求岛的个数， 2求面积， 3求坐标，4求周长， 5给岛染色 ）</a></li>
 </ul>
 
-<div class="codingSubSectionName">Directed Graph(有向图)</div>
+<div class="codingSubSectionName">Directed Graph(有向图, 有向图会很难，可能会牵涉一些复杂的图论算法)</div>
 <ul>
 	 <li><a href="solution/FindEventualSafeStates.html">Find eventual safe States(有向图找环)</a> <a href="https://leetcode.com/problems/find-eventual-safe-states/">Q</a>  </li>
    <li><a href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图有层次的遍历 + 找环)</a></li>
@@ -83,6 +83,12 @@
    <li><a href="solution/NumberofWaystoStayintheSamePlace.html">Number of Ways to stay in the same place</a> <a href="https://leetcode.com/problems/number-of-ways-to-stay-in-the-same-place-after-some-steps/">Q</a></li>
    <li><a href="solution/numberOfDiceWithTargetValue.html">Number of Dice with target Value(DFS top down vs DFS bottom up summary) </a> <a href="https://leetcode.com/problems/number-of-dice-rolls-with-target-sum/">Q</a></li>
    <li> <a href="solution/letterCombination.html">Letter combination( Different element on each level)</a></li></ul>
+</ul>
+
+div class="codingSubSectionName">DFS无法确定结束条件，导致recursion太深Stackoverflow, 而必须用BFS)</div>
+<ul>
+   <li><a href="solution/racecar.html">Race car</a> <a href="https://leetcode.com/problems/race-car/">Q</a></li>
+</ul>
 
 <div class="codingSubSectionName">Subset search in Binary Tree</div>
 
@@ -329,8 +335,9 @@
 </ul>
 
 
-<div class="codingSectionName">Linear Scan(Hard)</div>
+<div class="codingSectionName">Parentheses</div>
 <a>Stack->counter优化</a>
+</br>
 <a> 可以写出最直接的解法，O(n)greedy 写法面试很难直接想到</a>
 <ul>
    <li><a href=https://leetcode.com/problems/valid-parentheses/>Valid Parentheses</a>  </li>
