--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -85,7 +85,7 @@
    <li> <a href="solution/letterCombination.html">Letter combination( Different element on each level)</a></li></ul>
 </ul>
 
-div class="codingSubSectionName">DFS无法确定结束条件，导致recursion太深Stackoverflow, 而必须用BFS)</div>
+<div class="codingSubSectionName">DFS无法确定结束条件，导致recursion太深Stackoverflow, 而必须用BFS)</div>
 <ul>
    <li><a href="solution/racecar.html">Race car</a> <a href="https://leetcode.com/problems/race-car/">Q</a></li>
 </ul>
