--- a/html/solution/racecar.html
+++ b/html/solution/racecar.html
@@ -7,8 +7,8 @@
 <body>
 <pre><code>
 
-solution I: DFS是一路走到底然后在回溯， 这道题目因为可以一直往下走过了target以后在往回走，所以无法确定底在哪里。自己越估计的底对数值较大的时候会stacko
-verflow, 所以只能用BFS
+solution I: DFS是一路走到底然后在回溯， 这道题目因为可以一直往下走过了target以后在往回走，所以无法确定底在哪里。
+自己越估计的底对数值较大的target会产生stackoverflow, 所以只能用BFS
 
 class Solution {
     int ret = Integer.MAX_VALUE;
@@ -19,7 +19,10 @@ class Solution {
     }
 
     void dfs(int target, int pos, int speed, int step){
-      // 此处无法写出递归结束的条件，所以不能用DFS
+      // target范围是 [1-10000], 用一个经验数据1.3*target， 递归深度13000次会导致stack overflow。
+        if ( pos > 1.3 * target){
+           return;
+        }
 
         if ( target == pos){
             if ( step &lt; ret){
@@ -60,7 +63,9 @@ class Solution {
 
                 String str1 = convertToString(pos+speed, speed*2); // pruning
 
-                if ( !set.contains(str1) &&  (pos + speed) &lt; 1.3* target && (pos + speed) > 0 ){   // 1.3 is tentative number for pruning
+                if ( !set.contains(str1) &&  (pos + speed) &lt; 1.3* target && (pos + speed) > 0 ){
+                  // 1.3 is tentative number for pruning， 1.3*10000 = 13000次处理没有问题
+
                     q.add(new int[]{pos+speed, speed*2});
                     set.add(str1);
                 }
