--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -6,9 +6,11 @@
 
 <body>
 <pre><code>
-      coding    design
-12/4    3        2      8-11 coding,      下午状态很差，眼睛都睁不开了(看了design), 晚上回去睡到9点开始看API design, 9-11, 12-1睡不着 breaking bad. 2:30还是睡不着 youtube video
-12/5    2.5     1.5     10:30-11 coding , 下午状态正常，2hours coding.           晚上回去8点开始看API design   8-9:30
-12/6                    9-10:30  coding , 下午状态正常
+      coding    design                                  下午
+12/4    3        2         8-11 coding,           状态很差，眼睛都睁不开了(看了design), 晚上回去睡到9点开始看API design, 9-11, 12-1睡不着 breaking bad. 2:30还是睡不着 youtube video
+12/5    2.5     1.5        10:30-11 coding ,      状态正常，2hours coding.           晚上回去8点开始看API design   8-9:30
+12/6    2.5      1         9-10:30  coding ,      状态正常, 1hour coding             晚上回去8点开始看API design   8:30-9:30
+12/7    3.5      2         11:30-1:30 API design.   差          2                   Leetcode contest 1.5
+12/8                       11：30 - 1:30
 </code></pre>
 </body>
