--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -75,7 +75,6 @@
 <ul>
 	 <li><a href="https://leetcode.com/problems/longest-increasing-path-in-a-matrix/">Longest increasing path in matrix</a>  </li>
    <li><a href="https://leetcode.com/problems/burst-balloons/">Burst Balloons</a>  </li>
-   <li><a href="solution/MinFlipstoConvertBinaryMatrixtoZeroMatrix.html">Min Flips to Convert Binary Matrix to Zero Matrix</a> <a href="https://leetcode.com/problems/minimum-number-of-flips-to-convert-binary-matrix-to-zero-matrix/">Q</a>  </li>
 </ul>
 
 
@@ -87,9 +86,10 @@
    <li> <a href="solution/letterCombination.html">Letter combination( Different element on each level)</a></li></ul>
 </ul>
 
-<div class="codingSubSectionName">DFS栈太深会产生Stack overflow, 而必须用BFS)</div>
+<div class="codingSubSectionName">DFS栈太深产生Stack overflow或者运算量太大TLE, 但这些题目都是求最小步数，马上换成BFS做)</div>
 <ul>
-   <li><a href="solution/racecar.html">Race car</a> <a href="https://leetcode.com/problems/race-car/">Q</a></li>
+   <li><a href="solution/racecar.html">Race car（栈太深产生Stack overflow）</a> <a href="https://leetcode.com/problems/race-car/">Q</a></li>
+   <li><a href="solution/MinFlipstoConvertBinaryMatrixtoZeroMatrix.html">Min Flips to Convert Binary Matrix to Zero Matrix（运算量太大TLE）</a> <a href="https://leetcode.com/problems/minimum-number-of-flips-to-convert-binary-matrix-to-zero-matrix/">Q</a>  </li>
 </ul>
 
 <div class="codingSubSectionName">Subset search in Binary Tree</div>
