--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -11,6 +11,7 @@
 12/5    2.5     1.5        10:30-11 coding ,      状态正常，2hours coding.           晚上回去8点开始看API design   8-9:30
 12/6    2.5      1         9-10:30  coding ,      状态正常, 1hour coding             晚上回去8点开始看API design   8:30-9:30
 12/7    3.5      2         11:30-1:30 API design.   差          2                   Leetcode contest 1.5
-12/8                       11：30 - 1:30
+12/8     2       1         11：30 - 1:30                                                          API 730-8:30
+                           9:30 - 11
 </code></pre>
 </body>
