--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -69,6 +69,7 @@
 <ul>
 	 <li><a href="solution/FindEventualSafeStates.html">Find eventual safe States(有向图找环)</a> <a href="https://leetcode.com/problems/find-eventual-safe-states/">Q</a>  </li>
    <li><a href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图有层次的遍历 + 找环)</a></li>
+   <li><a href="solution/ShortestPathwithAlternatingColors.html">Shortest Path with Alternating Colors(有向图求最短路径 DFS超时，BFS能过)</a></li>
 </ul>
 
 <div class="codingSubSectionName">DFS + Memorization</div>
@@ -78,7 +79,7 @@
 </ul>
 
 
-<div class="codingSubSectionName">DFS跳棋模型：给定步数 + 走法限制，求多少种走法 DFS 优化到 -> DFS + Memorization )</div>
+<div class="codingSubSectionName">DFS + Memorization 跳棋模型：给定步数 + 走法限制，求多少种走法 DFS 优化到 -> DFS + Memorization )</div>
 <ul>
    <li><a href="solution/KnightDialer.html">Knight Dialer</a> <a href="https://leetcode.com/problems/knight-dialer/">Q</a></li>
    <li><a href="solution/NumberofWaystoStayintheSamePlace.html">Number of Ways to stay in the same place</a> <a href="https://leetcode.com/problems/number-of-ways-to-stay-in-the-same-place-after-some-steps/">Q</a></li>
