--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -69,7 +69,7 @@
 <ul>
 	 <li><a href="solution/FindEventualSafeStates.html">Find eventual safe States(有向图找环)</a> <a href="https://leetcode.com/problems/find-eventual-safe-states/">Q</a>  </li>
    <li><a href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图有层次的遍历 + 找环)</a></li>
-   <li><a href="solution/ShortestPathwithAlternatingColors.html">Shortest Path with Alternating Colors(有向图求最短路径 DFS超时，BFS能过)</a></li>
+   <li><a href="solution/ShortestPathwithAlternatingColors.html">Shortest Path with Alternating Colors(有向图边带颜色求最短路径 DFS超时，BFS)</a></li>
 </ul>
 
 <div class="codingSubSectionName">DFS + Memorization</div>
