--- a/html/solution/topologicalSortingTutorial.html
+++ b/html/solution/topologicalSortingTutorial.html
@@ -23,8 +23,10 @@
 <pre><code>
 
 记住togological sorting以下结论：
-用处 ： 有向图层次遍历, 找环
-注意 ： 必须从进度为0的点出发， 不能遍历环的节点
+用处 ： 有向图层次遍历
+注意 ： 1. 必须从进度为0的点出发
+       2. 如果图里有环的活，BFS会提前结束不能遍历图里所有的点，可以加一个counter来计数
+       3. 不需要HashSet去重
 
 
 
