--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -15,6 +15,7 @@
 12/9    3        1               9:30 - 11                 正常       1 design            8:9:30 coding
 12/10   3                  9:30 - 11:30              morale event                    7：30-8:30 coding
 12/11   5.5                9 - 10:30                       2hours coding             9-11
-12/12                      9-10:30
+12/12   1.5      1         9-10:30                                                   8-9 API
+12/13   1                   7-12 value discussion   状态很差 脑子转不了                  1     
 </code></pre>
 </body>
