--- a/html/solution/FindEventualSafeStates.html
+++ b/html/solution/FindEventualSafeStates.html
@@ -12,7 +12,7 @@
 
 <pre><code>
 
-Solution 1 : Naive DFS
+Solution 1 : Naive DFS: 每個點做DFS,   O(m+n)*n = 4.2*10^8
 
 class Solution {
     boolean loop = false;
