--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -360,6 +360,9 @@
   <li><a href="solution/Design.html">Design Questions Compination</a></li>
   <li><a href="solution/Design_Chat_System.html">Design Chatting System</a></li>
   <li><a href="solution/Design_MemCached.html">Design Memcached</a></li>
+  <li><a href="solution/Design_Instangram.html">Design Instagram</a></li>
+
+
 </ul>
 
 <div class="codingSectionName">TimeLine</div>
