--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -68,7 +68,7 @@
 <div class="codingSubSectionName">Directed Graph(有向图, 有向图会很难，可能会牵涉一些复杂的图论算法)</div>
 <ul>
 	 <li><a href="solution/FindEventualSafeStates.html">Find eventual safe States(有向图找环)</a> <a href="https://leetcode.com/problems/find-eventual-safe-states/">Q</a>  </li>
-   <li><a href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图有层次的遍历 + 找环)</a></li>
+   <li><a href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图有层次的遍历+ 有向图题目汇总和时间复杂度分析)</a></li>
    <li><a href="solution/ShortestPathwithAlternatingColors.html">Shortest Path with Alternating Colors(有向图边带颜色求最短路径 DFS超时，BFS)</a></li>
 </ul>
 
