--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -35,6 +35,7 @@ Design:
 1. 晚上9点以后不要刷题了。
    a. 效率低，debug很吃力。
    b. 深夜刷题晚上睡不着觉，第二天起来一般都是10点以后了。
+2. Do not do the problem where downvote is more than upvote.
 
 
           coding    design                                  下午
