--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -84,6 +84,7 @@
    <li><a href="solution/KnightDialer.html">Knight Dialer</a> <a href="https://leetcode.com/problems/knight-dialer/">Q</a></li>
    <li><a href="solution/NumberofWaystoStayintheSamePlace.html">Number of Ways to stay in the same place</a> <a href="https://leetcode.com/problems/number-of-ways-to-stay-in-the-same-place-after-some-steps/">Q</a></li>
    <li><a href="solution/numberOfDiceWithTargetValue.html">Number of Dice with target Value(DFS top down vs DFS bottom up summary) </a> <a href="https://leetcode.com/problems/number-of-dice-rolls-with-target-sum/">Q</a></li>
+   <li><a href="https://leetcode.com/problems/target-sum">Target Sum</a></li>
    <li> <a href="solution/letterCombination.html">Letter combination( Different element on each level)</a></li></ul>
 </ul>
 
