--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -55,5 +55,14 @@ Design:
 12/17       1        1                                1hour system design, 1 coding
 12/18       2.5      2              9:10-10:50                    1-2                             2-4
 12/19        2                                                 1 coding                         1 coding
+12/20        1       1
+12/21                1
+12/22                1
+12/23                2
+12/24                2
+12/25                          break
+12/26                          break
+12/27       2        2
+12/28       1        2
 </code></pre>
 </body>
