--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -64,5 +64,7 @@ Design:
 12/26                          break
 12/27       2        2
 12/28       1        2
+1/13        2        1                                    11 - 1                            7:30-8:30 groking code review.
+1/14        2                 1030-1230 design
 </code></pre>
 </body>
