--- a/html/solution/Design.html
+++ b/html/solution/Design.html
@@ -20,6 +20,33 @@ Facebook Design Questions:
 3. Design news feed
 4. Design Chat System
 
+knowledge summary
+1. SQL vs NOSQL https://www.educative.io/courses/grokking-the-system-design-interview/m2yDVZnQ8lG need authentication
+  a. storage model
+      SQL is relational DB whereas NOSQL is nonrelational DB.
+      NOSQL has different storage model:
+      1: key value:    Radis, Memcached
+      2: document:     MongoDB
+      3: Wide Column:  Cassandra
+      4: Graph DB:
+
+  b. key difference
+                                 SQL                                          NOSQL
+  schema                         Yes                                           NO
+  scale(sharding, replication)   Manually(challenging time consuming)       Automatica (cheap)
+  ACID compliant                 Better
+
+  In general, NOSQL db sacrifices ACID compliance for scalability and high speed.
+
+  c. When SQL is prefered
+
+     c1. The case you need to use SQL: Need to have ACID compliance. Transaction, for example bank.
+     c2. You data is structurd and unchanged.
+
+  d. When to NOSQL is preferred
+     d1. Store large data that has no structure.
+     d2. you want software scale the data for you.
+     d3. fast development.
 
 </code></pre>
 </body>
