--- a/html/solution/Design.html
+++ b/html/solution/Design.html
@@ -48,5 +48,7 @@ knowledge summary
      d2. you want software scale the data for you.
      d3. fast development.
 
+  e. Cassandra or key-value stores in general, always maintain a certain number of replicas to offer reliability
+
 </code></pre>
 </body>
