--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -9,6 +9,8 @@
 <body>
 
 <pre><code>
+https://leetcode.com/problemset/all/?companySlugs=facebook&difficulty=Medium&status=Todo
+
 
 Target Company:
 1. Google, Facebook(2022), Airbnb.
@@ -70,7 +72,8 @@ Design:
 1/16        1        2                                    3-5                                9-10
 1/17                 2                                    2-4
 1/18                 1        1200-1300
-1/19        6
-1/20                                                    1-2
+1/19        7                                             12-10 三道hard
+1/20        7                                             1-11  三道hard
+1/21
 </code></pre>
 </body>
