--- a/html/solution/Design.html
+++ b/html/solution/Design.html
@@ -9,16 +9,58 @@
 
 <body>
 <pre><code>
-online Design resources:
-1. https://www.educative.io/courses/grokking-the-system-design-interview/m2yDVZnQ8lG
-2. https://github.com/donnemartin/system-design-primer
-3. https://www.jiuzhang.com/accounts/profile/registered_courses/75/
+Online Design resources:
+1. Educative(best courses：入门级别的): https://www.educative.io/courses/grokking-the-system-design-interview/m2yDVZnQ8lG
+2. Design Data Intensive application(理论支持)
+3. Engineering blog/presentation（工业界的具体实现）
+   blog example: https://eng.uber.com/cherami/
+   presentation exapmle: https://www.infoq.com/presentations/pinterest/
+
+
+4. Github Facebook design questions(写的一般): https://github.com/donnemartin/system-design-primer
+5. jiuzhang design tutorial(没有撒用) https://www.jiuzhang.com/accounts/profile/registered_courses/75/
+
+
+
+
+
+How to prepare System design:
+1. 一亩三分地讲如何准备： https://www.1point3acres.com/bbs/forum-323-1.html
+2. 一亩三分地面经：https://www.1point3acres.com/bbs/forum.php?mod=forumdisplay&fid=145&filter=sortid&sortid=311&orderby=dateline
+3. 如何对着公司准备：
+   “对每家onsite的公司 -> 在地里翻完最近两年所有onsite面筋aggregate所有design题目 -> 对每个题目找工业界实现的blog -> 阅读每个blog，选中最好的一到两个 -> 读到烂熟，整理出我当面试官的话会问的所有问题不停考自己 -> 白板英文自行mock 3遍 -> over”
+
+
+
+
+
+
 
 Facebook Design Questions:
 1. Design Memcached
 2. Design Uber
 3. Design news feed
 4. Design Chat System
+5  <li> <a href="solution/Design_Instangram.html">Design Instangram</a></li>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 knowledge summary
 1. SQL vs NOSQL https://www.educative.io/courses/grokking-the-system-design-interview/m2yDVZnQ8lG need authentication
