--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -9,28 +9,49 @@
 <body>
 
 <pre><code>
-https://leetcode.com/problemset/all/?companySlugs=facebook&difficulty=Medium&status=Todo
 
 
 Target Company:
-1. Google, Facebook(2022), Airbnb.
-2. Use Amazon to beat offer.
+1. G/F/Airbnb
+2. Amazon/Oracle/Saleforce to match offer.
 
-Timeline:
-March: use internal group interview as practice.
-June: start to apply.
-October: onboarding to new company.
+Timeline consideration:
+Green card: Microsoft to submit 485 no later than 3/1. Wait for 180, the earliest date you can jump is 9/1,
+Sign on bonus: Microsoft sign on restriction is 9/24, so the earliest date you can jump is 9/24.
+Performance bonus: Microsoft to give performance bonus 9/1.
+
+
+
+Oct 2019 - Jan 2020
+Prepare coding and design.
+
+Feb 2020
+Internal team to practice, focus on design
+
+
+
+
 
 Coding:
 12/14: Done 409 questions
-     Next step: Company oriented:
-     Practice Facebook tag, speed is king! after algorithm is finalized, finish coding in 5 minutes.
+       Speed is king! after algorithm is finalized, finish coding in 5 minutes.
+
+1/20:  Done 452 questions:
+       on Facebook medium/hard
+       https://leetcode.com/problemset/algorithms/?companySlugs=facebook&difficulty=Medium&status=Todo
+
 
 
 Design:
-1. read book API design, educative design question, github Facebook design page.
-2. company oriented:
-   Dive into 一亩三名地的facebook design question. 对着题目准备
+1. Book API design, educative design question, github Facebook design.
+2. company oriented:一亩三名地的facebook design question. 对着题目准备
+
+
+Dec 2019 - Jan 2020: Finished API design book.
+
+Feb 2020           : Facebook design questions in one acre three points
+
+
 
 
 作息时间总结：
@@ -71,9 +92,9 @@ Design:
 1/15        1                                                                                            830-930
 1/16        1        2                                    3-5                                9-10
 1/17                 2                                    2-4
-1/18                 1        1200-1300
-1/19        7                                             12-10 三道hard
-1/20        7                                             1-11  三道hard
+1/18        7                                             3 of hard
+1/19        7                                             3 of hard
+1/20        7                                             6 of medium
 1/21
 </code></pre>
 </body>
