--- a/html/solution/Design.html
+++ b/html/solution/Design.html
@@ -13,7 +13,8 @@ Online Design resources:
 1. Educative(best courses：入门级别的): https://www.educative.io/courses/grokking-the-system-design-interview/m2yDVZnQ8lG
 2. Design Data Intensive application(理论支持)
 3. Engineering blog/presentation（工业界的具体实现）
-   blog example: https://eng.uber.com/cherami/
+   blog example: <li> <a href=" https://eng.uber.com/cherami/">Uber Engineerig Blog</a></li>
+
    presentation exapmle: https://www.infoq.com/presentations/pinterest/
 
 
@@ -41,7 +42,7 @@ Facebook Design Questions:
 2. Design Uber
 3. Design news feed
 4. Design Chat System
-5  <li> <a href="solution/Design_Instangram.html">Design Instangram</a></li>
+5  <li> <a href="Design_Instangram.html">Design Instangram</a></li>
 
 
 
