--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -358,10 +358,8 @@
 
 <div class="codingSectionName">System Design</div>
 <ul>
-  <li><a href="solution/Design.html">Design Questions Compination</a></li>
-  <li><a href="solution/Design_Chat_System.html">Design Chatting System</a></li>
-  <li><a href="solution/Design_MemCached.html">Design Memcached</a></li>
-  <li><a href="solution/Design_Instangram.html">Design Instagram</a></li>
+  <li><a href="solution/Design.html">Design Summary </a></li>
+
 
 
 </ul>
