--- a/html/solution/Design.html
+++ b/html/solution/Design.html
@@ -38,7 +38,7 @@ How to prepare System design:
 
 
 Facebook Design Questions:
-<li> <a href="solution/Design_Instangram.html">1. Design news feed : Facebook/Instangram/Twitter/微信朋友圈 </a></li>
+<li> <a href="Design_Instangram.html">1. Design news feed : Facebook/Instangram/Twitter/微信朋友圈 </a></li>
 
 Design Memcached
 Design Uber
